# tCore

./: .gitignore  .gitmodules  2023_03_15_20_47_11.txt  2023_03_29_22_08_01.txt  Cargo.toml  LICENSE  Makefile  README.md  debug.sh  hello.S  kernel-qemu  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: classroom.yml
crates/device-cache/: Cargo.toml
crates/device-cache/src/: block.rs  lib.rs
crates/device-cache/tests/: block.rs
crates/easy-fs/: Cargo.toml
crates/easy-fs/src/: bitmap.rs  block_cache.rs  efs.rs  layout.rs  lib.rs  vfs.rs
crates/errno/: Cargo.toml
crates/errno/src/: lib.rs
crates/fscommon/: Cargo.toml
crates/id-alloc/: Cargo.toml
crates/kernel-sync/: Cargo.toml  README.md
crates/kernel-sync/src/: arch.rs  lib.rs  rcu.rs  seqlock.rs  sleep.rs  sleeplock.rs  spin.rs  spinlock.rs
crates/mm-addr/: Cargo.toml
crates/mm-addr/src/: lib.rs
crates/mm-rv/: Cargo.toml
crates/mm-rv/src/: address.rs  config.rs  frame_alloc.rs  lib.rs  page_alloc.rs  page_table.rs  test.rs
crates/oscomp/: Cargo.toml
crates/oscomp/src/: lib.rs  testcases.rs
crates/rust-fatfs/: Cargo.toml
crates/rust-fatfs/src/: dir.rs  file.rs  fs.rs  lib.rs
crates/rust-vfs/: Cargo.toml  README.md
crates/rust-vfs/src/: dentry.rs  file.rs  fs.rs  inode.rs  lib.rs  path.rs  superblock.rs
crates/signal-defs/: Cargo.toml
crates/signal-defs/src/: lib.rs  sigaction.rs  siginfo.rs  signo.rs  sigpending.rs  sigset.rs
crates/syscall/: Cargo.toml
crates/syscall/src/: comm.rs  file.rs  io.rs  lib.rs  proc.rs  timer.rs
crates/talloc/: Cargo.toml
crates/talloc/src/: lib.rs
crates/tbuffer/: Cargo.toml
crates/tbuffer/src/: lib.rs  ring_buf.rs  test.rs
crates/tcache/: Cargo.toml
crates/tcache/src/: block.rs  lib.rs  test.rs
crates/terrno/: Cargo.toml
crates/terrno/src/: lib.rs
crates/tfs/: Cargo.toml
crates/time-subsys/: Cargo.toml
crates/time-subsys/src/: config.rs  lib.rs  spec.rs
crates/tmemfs/: Cargo.toml
crates/tmemfs/src/: lib.rs  null.rs  zero.rs
crates/tmm_addr/: Cargo.toml
crates/tmm_addr/src/: lib.rs  test.rs
crates/tmm_rv/: Cargo.toml
crates/tmm_rv/src/: address.rs  config.rs  frame.rs  frame_alloc.rs  lib.rs  page_alloc.rs  page_table.rs  test.rs
crates/tsched/: Cargo.toml
crates/tsignal/: Cargo.toml
crates/tsignal/src/: lib.rs  sigaction.rs  siginfo.rs  signo.rs  sigpending.rs
crates/tsync/: Cargo.toml
crates/tsyscall/: Cargo.toml
crates/tsyscall/src/: comm.rs  file.rs  io.rs  lib.rs  proc.rs  timer.rs
crates/tsyscall_no/: Cargo.toml
crates/tsyscall_no/src/: lib.rs
crates/tsyscall_rv/: Cargo.toml
crates/tsyscall_rv/src/: lib.rs
crates/ttimer/: Cargo.toml
crates/ttimer/src/: lib.rs  spec.rs
crates/tvfs/: Cargo.toml
crates/tvfs/src/: flag.rs  lib.rs  link.rs  path.rs  stat.rs  test.rs
crates/tvmm_addr/: Cargo.toml
crates/ubuf/: Cargo.toml
crates/ubuf/src/: lib.rs  test.rs
crates/uintr/: Cargo.toml
crates/uintr/src/: instr.rs  lib.rs  test.rs  uipi.rs
crates/uintr/src/register/: mod.rs  sideleg.rs  suitt.rs  upidaddr.rs  uuirq.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: flags.rs  lib.rs  link.rs  path.rs  ring_buf.rs  stat.rs
crates/vfs/tests/: path.rs
docs/: log.md  oscamp.md
kernel/: Cargo.toml
kernel/src/: config.rs  console.rs  error.rs  heap.rs  loader.rs  main.rs  timer.rs
kernel/src/arch/riscv/: mod.rs  stdio.rs
kernel/src/arch/riscv64/: context.rs  mod.rs  timer.rs  uintr.rs
kernel/src/arch/riscv64/trap/: mod.rs  trampoline.rs  trapframe.rs
kernel/src/config/: kernel.rs  mod.rs  time.rs  user.rs
kernel/src/cons/: logger.rs  mod.rs  panic.rs
kernel/src/console/: logger.rs  mod.rs  panic.rs
kernel/src/driver/: virtio_block.rs
kernel/src/fs/: f.rs  fat.rs  fd.rs  info.rs  link.rs  mod.rs  pipe.rs  stdio.rs
kernel/src/fs/efs/: mod.rs
kernel/src/fs/fat/: file.rs  io.rs  link.rs  mod.rs
kernel/src/fs/mem/: mod.rs  null.rs  zero.rs
kernel/src/loader/: flags.rs  init.rs  mod.rs
kernel/src/mm/: file.rs  flags.rs  kernel.rs  loader.rs  mod.rs  pma.rs  user_buf.rs  vma.rs
kernel/src/mm/pma/: fixed.rs  identical.rs  lazy.rs  mod.rs
kernel/src/mm/vma/: flags.rs  mod.rs
kernel/src/syscall/: comm.rs  file.rs  info.rs  io.rs  mod.rs  proc.rs  timer.rs
kernel/src/task/: clone.rs  context.rs  exit.rs  fork.rs  kstack.rs  limit.rs  manager.rs  mod.rs  sched.rs  schedule.rs  task.rs
kernel/src/tests/: mod.rs  rcu.rs  sleeplock.rs
kernel/src/trap/: mod.rs  trampoline.rs  trapframe.rs
libc/: .gitignore  Makefile  static_testcases.txt
plat/qemu/: linker.ld
sbi/: Makefile  linker.ld  main.c  sbi.asm  sbi.elf  start.S  trap.S
sbi/devices/clint/: clint.c  clint.h
sbi/devices/uart/: uart.c  uart.h
sbi/include/: common.h  encoding.h  io.h  mem.h  riscv.h  smp.h
sbi/libs/: console.c  console.h  string.c  string.h
sbi/trap/: trap.c  trap.h
src/: main.rs  serial.rs
src/boot/: linker.ld  start.S
src/include/: encoding.h
tCore/src/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: libc.rs  main.rs  pack.rs
