[package]
name = "tcore-kernel"
version = "0.1.0"
edition = "2021"
authors = ["TKF <kaifu6821@qq.com>"]

[dependencies]
bitflags = "1.3.2"
buddy_system_allocator = "0.8"
cfg-if = "1.0"
log = "0.4"
numeric-enum-macro = "0.2.0"
riscv = "0.9"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
spin = "0.9"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
xmas-elf = "0.8"

# Third party crates (modified)
easy-fs = { path = "../crates/easy-fs" }
fatfs = { path = "../crates/rust-fatfs", version = "0.4", default-features = false, features = ["alloc", "lfn"] }
oscomp = { path = "../crates/oscomp" }

# tCore crates (private)
talloc = { path = "../crates/talloc" }
tcache = { path = "../crates/tcache" }
tmm_rv = { path = "../crates/tmm_rv" }
tsyscall = { path = "../crates/tsyscall" }
ttimer = { path = "../crates/ttimer" }
tvfs = { path = "../crates/tvfs" }
terrno = { path = "../crates/terrno" }
tmemfs = { path = "../crates/tmemfs" }
tbuffer = { path = "../crates/tbuffer" }

[features]
default = ["oscomp", "test", "uintr"]
test = []
oscomp = []
uintr = []