[package]
name = "tcore-kernel"
version = "0.1.0"
edition = "2021"
authors = ["TKF <kaifu6821@qq.com>"]

[dependencies]
bitflags = "1.3.2"
buddy_system_allocator = "0.8"
cfg-if = "1.0"
log = "0.4"
numeric-enum-macro = "0.2.0"
spin = "0.9"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
xmas-elf = "0.8"

# Third party crates (modified)
easy-fs = { path = "../crates/easy-fs" }
fatfs = { path = "../crates/rust-fatfs", version = "0.4", default-features = false, features = ["alloc", "lfn", "log_level_info"] }
oscomp = { path = "../crates/oscomp" }
bit_field = "0.10"

# tCore crates (private)
device-cache = { path = "../crates/device-cache" }
errno = { path = "../crates/errno" }
id-alloc = { path = "../crates/id-alloc" }
kernel-sync = {  git = "https://github.com/tkf2019/kernel-sync" }
signal-defs = { path = "../crates/signal-defs" }
syscall-interface = { path = "../crates/syscall" }
time-subsys = { path = "../crates/time-subsys" }
vfs = { path = "../crates/vfs" }
ubuf = { path = "../crates/ubuf" }

# [target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.10"
sbi-rt = { version = "0.0.2", features = ["legacy"] }

mm-rv = { path = "../crates/mm-rv" }
uintr = { path = "../crates/uintr" }

[features]
default = ["oscomp", "test"]
test = []
oscomp = []
uintr = []
sleeplock = []