[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
authors = ["TKF <kaifu6821@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4" }
clap = { version = "4.0.10", features = ["derive"] }
once_cell = "1.15"

easy-fs = { path = "../crates/easy-fs" }
fatfs = { path = "../crates/rust-fatfs", version = "0.4" }
fscommon = { version = "0.1.1", features = ["std"] }