[package]
name = "mm-rv"
categories = [
    "os",
    "virtual memory",
]
version = "0.1.0"
edition = "2021"
authors = ["TKF <kaifu6821@qq.com>"]
description = "Virtual memory subsystem for arch RISC-V"

[dependencies]
bitflags = "1.3.2"
buddy_system_allocator = "0.8"
log = "0.4"
riscv = "0.10"
spin = "0.9"

mm-addr = { path = "../mm-addr" }