[package]
name = "rust-vfs"
version = "0.1.0"
edition = "2021"
authors = ["TKF <kaifu6821@qq.com>"]
readme = "README.md"
keywords = ["vfs", "no_std"]
categories = ["os", "filesystem"]
description = "Virtual filesystem library"

[features]
# Use Rust std library
std = []
# Enable only error-level logging
log_level_error = []
# Enable logging levels warn and up
log_level_warn  = ["log_level_error"]
# Enable logging levels info and up
log_level_info  = ["log_level_warn"]
# Enable logging levels debug and up
log_level_debug = ["log_level_info"]
# Enable all logging levels: trace and up 
log_level_trace = ["log_level_debug"]

# Default features
default = ["std", "log_level_error"]

[dependencies]
bitflags = "1.3.2"
log = "0.4"
spin = "0.9"

kernel-sync = {  git = "https://github.com/tkf2019/kernel-sync" }